...
                        android:text="@string/artist_msg"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/blue"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchBar"
                        android:layout_width="260dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_border"
                        android:iconifiedByDefault="false"
...
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:queryHint="@string/discover_searchbar" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_apply_filters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/rounded_border"
...
