...
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchView">

                    <!-- Button to get random music -->
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/discoverButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="32dp"
                        android:background="@drawable/rounded_border"
                        android:backgroundTint="@color/blue"
...
