<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="" />

    <item
        android:id="@+id/top_list"
        android:icon="@drawable/ic_list"
        android:title="" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_star"
        android:title="" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:title="" />

</menu>
