<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_to_playlist"
        android:title="@string/save_on_playlist_menu" />

</menu>